# GameOfLifeCPP

./: 2  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  stackoverflow.make  test
.cache/clangd/index/: Application.cpp.04CC0A73DF50A891.idx  Application.cpp.7850D32F76939DFC.idx  Application.cpp.7850D32F76939DFC_REMOTE_9985.idx  Application.h.95273717B60707CF.idx  ApplicationEvent.h.E3278D4CBE511F74.idx  Event.h.C8EFF7FDAC12C544.idx  IndexBuffer.cpp.504D6FD9ABBC9805.idx  IndexBuffer.cpp.64BD58CDA9E350E2.idx  IndexBuffer.h.3488C38F31BB872B.idx  IndexBuffer.h.3674A87F824CBA33.idx  Input.cpp.53BA60A950DC73AA.idx  Input.h.20DD4C3051F94286.idx  InstanceBuffer.cpp.537498CAC472472B.idx  InstanceBuffer.cpp.816A1EFA46F356AE.idx  InstanceBuffer.h.2AFCFF9943CA45A2.idx  InstanceBuffer.h.E861006ABECC1B26.idx  InstanceBufferLayout.h.866E47E97D6C3E77.idx  InstanceBufferLayout.h.CEE73E565A7149D8.idx  KeyEvent.h.9C8A2DAA57A73189.idx  LayerStack.cpp.9ED702F8F004CC66.idx  LayerStack.h.AF0D82AAA2934D97.idx  Layer_ImGui.cpp.F0031453D9BB7B52.idx  Layer_ImGui.h.D0677B2711BEABD7.idx  Layer_Test.cpp.7A9A771695E28D79.idx  Layer_Test.h.9292D571E92D4B8B.idx  Layer_Universe.cpp.D2527EA9129D437A.idx  Layer_Universe.h.C3F5FB39A0C3CC46.idx  Logger.h.4EACBAFC84CA0D8D.idx  Logger.h.DD33C9D0A5CCBFA4.idx  MouseEvent.h.D2FAD8A5DFCA3E80.idx  OpenGLRendererAPI.cpp.1343826131745F3E.idx  OpenGLRendererAPI.h.87133CBD9F674607.idx  OrthographicCamera.cpp.8044CD2EA2032758.idx  OrthographicCamera.h.449E965803EEBE5A.idx  OrthographicCameraController.cpp.C4B2F689263751BB.idx  OrthographicCameraController.h.434CE1CA58B073AB.idx  RenderCommand.cpp.4C08B6CD12EEEB7F.idx  RenderCommand.h.59887F433AFE4AAE.idx  Renderer.cpp.039D429D1A551D0C.idx  Renderer.cpp.290897F82706A677.idx  (+280 more)
assets/: axis.shader  basic.shader  cube.shader  gol.shader
src/: Application.cpp  Application.h  Input.cpp  Input.h  LayerStack.cpp  LayerStack.h  Layer_ImGui.cpp  Layer_ImGui.h  Layer_Test.cpp  Layer_Test.h  Layer_Universe.cpp  Layer_Universe.h  Logger.h  Shader.cpp  Shader.h  Universe.cpp  Universe.h  UniverseLayerInstance.cpp  UniverseLayerInstance.h  Window.cpp  Window.h
src/utils/: Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  VertexBuffer.cpp  VertexBufferLayout.h
src/utils/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.h
src/utils/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
src/utils/OpenGL_Abstraction/: InstanceBufferLayout.h  Renderer.cpp  Shader.h
src/utils/OpenGL_Abstractions/: IndexBuffer.cpp  IndexBuffer.h  InstanceBuffer.cpp  InstanceBuffer.h  Renderer.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/utils/Renderer/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h
